--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL = 'http://slidertest321.herokuapp.com'
+REACT_APP_API_URL = 'https://slidertest321.herokuapp.com'
 DJANGO_ADMIN_URL=^admin/
